Updated nuget id

--- a/nuget/Unity.Wcf.nuspec
+++ b/nuget/Unity.Wcf.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>Unity.Wcf</id>
+    <id>UnityWCF</id>
     <version>2.0.0</version>
     <authors>Uriil</authors>
     <owners>DevTrends</owners>
     <licenseUrl>http://unitywcf.codeplex.com/license</licenseUrl>
     <projectUrl>https://github.com/Uriil/unitywcf</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Unity.Wcf is a library that allows simple Integration of Microsoft's Unity IoC container with WCF. This project includes a bespoke InstanceProvider that creates a child container per client connection and disposes of all registered IDisposable instances once the connection is terminated.</description>
+    <description>Unity.WCF is a library that allows simple Integration of Microsoft's Unity IoC container with WCF. This project includes a bespoke InstanceProvider that creates a child container per client connection and disposes of all registered IDisposable instances once the connection is terminated.</description>
     <tags>wcf unity ioc di</tags>
 	<dependencies>
       <dependency id="Unity" version="4.0.1" />
